fix overflow

--- a/themes/sherpa/styles/sherpa.sass
+++ b/themes/sherpa/styles/sherpa.sass
@@ -13,6 +13,7 @@
 body
   +xy-grid
   text-align: center
+  overflow-x: hidden
 
 ul
   margin-left: 0
